tests/typechecker/fail/400-assign-operators.hyg
let mutable x = "hello";

x += 2 // error: cannot use operator '+=' with operands of type 'string' and 'int'
